[package]
name = "rustpll"
version = "0.2.0"
authors = ["Adarsh Pannu <13154869+adarshpannu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = "0.4.0"
clp = {git = "https://github.com/adarshpannu/clp"}
